--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>hajara - waraka - mikas Game</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/e391ce7786.js" crossorigin="anonymous"></script>
-    <script src="style.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <h1>hajara - waraka - mikas</h1>
@@ -18,7 +18,7 @@
             <div class="info">
                 <h3>player1 :</h3><span id="player1Score">0</span>
             </div>
-            <div class="show ">
+            <div class="show ply1">
                 <i class="fas fa-hand-rock"></i>
             </div>
         </div>
@@ -27,7 +27,7 @@
             <div class="info">
                 <h3>player2 :</h3><span id="player2Score">0</span>
             </div>
-            <div class="show ply1">
+            <div class="show ply2">
                 <i class="fas fa-hand-scissors"></i>
             </div>
         </div>
@@ -36,15 +36,15 @@
 <!-- This selection div contains the buttons   -->
     <div class="selection">
         <h3 style="color: rgb(19, 208, 233);" >player1 choose</h3>
-        <button class="fas fa-hand-rock" id="rock"></button>
-        <button class="fas fa-hand-paper" id="paper"></button>
-        <button class="fas fa-hand-scissors" id="scissors"></button>
+        <button class="fas fa-hand-rock" id="rock-1"></button>
+        <button class="fas fa-hand-paper" id="paper-1"></button>
+        <button class="fas fa-hand-scissors" id="scissors-1"></button>
     </div>
     <div class="selection">
         <h4 style="color: rgb(19, 208, 223);" >player2 choose</h4>
-        <button class="fas fa-hand-rock" id="rock"></button>
-        <button class="fas fa-hand-paper" id="paper"></button>
-        <button class="fas fa-hand-scissors" id="scissors"></button>
+        <button class="fas fa-hand-rock" id="rock-2"></button>
+        <button class="fas fa-hand-paper" id="paper-2"></button>
+        <button class="fas fa-hand-scissors" id="scissors-2"></button>
     </div>
 </body>
 </html>
